# HyperSLAM

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
apps/hyperslam/: CMakeLists.txt  main.cpp
apps/tests/: CMakeLists.txt  main.cpp
evaluation/: README.md  conversions.py  requirements.txt  run.py  run.sh
include/hyper/: composite.hpp
include/hyper/environment/: abstract.hpp  environment.hpp  forward.hpp
include/hyper/environment/landmarks/: absolute.hpp  abstract.hpp  forward.hpp  variable.hpp
include/hyper/environment/observations/: abstract.hpp  forward.hpp  inertial.hpp  landmark.hpp  manifold.hpp  visual.hpp
include/hyper/optimizers/: abstract.hpp  forward.hpp
include/hyper/optimizers/ceres/: optimizer.hpp
include/hyper/optimizers/ceres/costs/: exteroceptive.hpp  forward.hpp
include/hyper/optimizers/ceres/manifolds/: forward.hpp
include/hyper/optimizers/ceres/manifolds/sensors/: camera.hpp  forward.hpp  imu.hpp  sensor.hpp
include/hyper/optimizers/ceres/manifolds/variables/: bearing.hpp  euclidean.hpp  gravity.hpp  se3.hpp  stamped.hpp  su2.hpp  wrapper.hpp
include/hyper/optimizers/evaluators/: abstract.hpp  evaluator.hpp  forward.hpp  query.hpp
include/hyper/system/: forward.hpp  system.hpp
include/hyper/system/components/: abstract.hpp  backend.hpp  forward.hpp  module.hpp
include/hyper/system/components/frontends/: abstract.hpp  forward.hpp
include/hyper/system/components/frontends/inertial/: direct.hpp  forward.hpp
include/hyper/system/components/frontends/visual/: Initializer.hpp  MonocularUtilizer.hpp  klt.hpp  klt_mono.hpp  tracking.hpp
internal/hyper/environment/: abstract.cpp
internal/hyper/environment/landmarks/: absolute.cpp  abstract.cpp
internal/hyper/environment/observations/: abstract.cpp  landmark.cpp  visual.cpp
internal/hyper/optimizers/: abstract.cpp
internal/hyper/optimizers/ceres/: optimizer.cpp
internal/hyper/optimizers/ceres/costs/: exteroceptive.cpp
internal/hyper/optimizers/ceres/manifolds/sensors/: camera.cpp  imu.cpp  sensor.cpp
internal/hyper/optimizers/ceres/manifolds/variables/: bearing.cpp  se3.cpp  su2.cpp
internal/hyper/optimizers/evaluators/: bearing.cpp  inertial.cpp  manifold.cpp  pixel.cpp
internal/hyper/system/: system.cpp
internal/hyper/system/components/: abstract.cpp  backend.cpp  module.cpp
internal/hyper/system/components/frontends/: abstract.cpp
internal/hyper/system/components/frontends/inertial/: direct.cpp
internal/hyper/system/components/frontends/visual/: Initializer.cpp  MonocularUtilizer.cpp  klt.cpp  klt_mono.cpp  tracking.cpp
resources/datasets/euroc/sequences/: MH_02_easy.txt  MH_03_medium.txt  MH_04_difficult.txt  MH_05_difficult.txt  V1_01_easy.txt  V1_02_medium.txt  V1_03_difficult.txt  V2_01_easy.txt  V2_02_medium.txt  V2_03_difficult.txt
resources/datasets/euroc/setups/stereo/: settings.yaml
resources/datasets/euroc/setups/stereo_inertial/: settings.yaml
resources/datasets/kitti/sequences/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
resources/datasets/tum/sequences/: dataset-seq1.txt  dataset-seq10.txt  dataset-seq2.txt  dataset-seq3.txt  dataset-seq4.txt  dataset-seq5.txt  dataset-seq6.txt  dataset-seq7.txt  dataset-seq8.txt  dataset-seq9.txt
resources/datasets/tum/setups/stereo/: settings.yaml
tests/include/tests/: forward.hpp  random.hpp
tests/include/tests/optimizers/evaluators/: evaluator.hpp  forward.hpp
tests/include/tests/sensors/: camera.hpp  imu.hpp  sensor.hpp
tests/include/tests/state/: abstract.hpp
tests/internal/tests/optimizers/evaluators/: bearing.cpp  inertial.cpp  manifold.cpp  pixel.cpp
